2006-08-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am: Added munge.init to noinst_DATA.

	* src/libcommon/log.c(_log_prefix): Changed priorities to mixed-case.

	* README, munge.spec: Updated description.

2006-07-27  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Changed the test for starting a service on
	  RedHat to mirror the test for stopping a service there.

	* src/libcommon/log.c(_log_die): Changed behavior to only return error
	  message across "daemonize" pipe if the logging fp is not set to
	  stderr in order to avoid having the message written to stderr first
	  by the grandchild process and again by the original parent process.

	* src/etc/munge.init.in: Changed behavior to capture stderr on start
	  and output it on error.
	* src/etc/munge.init.in: Changed behavior on RedHat to not return an
	  error when stopping a service that is already stopped.

2006-07-26  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/munged.c(main): Moved daemonize_fini() to just before
	  job_accept() in order to return more fatal error conditions to shell.
	* src/munged/munged.c(daemonize_init): Changed behavior for original
	  parent process to read error priority & message via "daemonize" pipe
	  and write error message to stderr before exiting.
	* src/munged/munged.c(open_logfile): Added.
	* src/munged/conf.c, src/munged/conf.h: Added logfile_name to conf.
	* src/libcommon/log.c(_log_aux): Added msgbuf & msgbuflen to prototype.
	  Changed behavior to return error message string via msgbuf.
	* src/libcommon/log.c(_log_die): Added priority & msg to prototype.
	  Changed behavior to return priority and msg across "daemonize" pipe.
	* src/libcommon/log.h(log_set_err_pipe): Updated documentation.

2006-07-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/munged.c: Changed daemonize_init() and daemonize_fini()
	  so grandchild process can return error status to original parent
	  process via "daemonize" pipe.