@@ -1,5 +1,7 @@
 2006-08-10  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* Makefile.am: Replaced distclean-local target with DISTCLEANFILES.
+
 	* src/etc/Makefile.am: Added munge.init to noinst_DATA.
 
 	* src/libcommon/log.c(_log_prefix): Changed priorities to mixed-case.
